--- a/atividades.html
+++ b/atividades.html
@@ -388,10 +388,10 @@ diversidade com dados de bases abertas</em></h4>
 <img src="atividade_1_files/figure-html/unnamed-chunk-7-1.png"
 width="550" />
 </center>
-<p>A <a href="atividade1.html"><strong>atividade 1</strong></a> consiste
-em um exercício de mapas de distribuição a partir de bases abertas,
-neste caso, com dados do repositório da <em>International Union for
-Conservation of Nature</em> <a
+<p>A <a href="atividade_1.html"><strong>atividade 1</strong></a>
+consiste em um exercício de mapas de distribuição a partir de bases
+abertas, neste caso, com dados do repositório da <em>International Union
+for Conservation of Nature</em> <a
 href="http://www.iucnredlist.org/technical-documents/spatial-data">IUCN</a>.</p>
 <p><br><br></p>
 <hr />
