--- a/atividades.html
+++ b/atividades.html
@@ -392,7 +392,7 @@ width="550" />
 consiste em um exercício de mapas de distribuição a partir de bases
 abertas, neste caso, com dados do repositório da <em>International Union
 for Conservation of Nature</em> <a
-href="http://www.iucnredlist.org/technical-documents/spatial-data">IUCN</a>.</p>
+href="https://www.iucnredlist.org/resources/spatial-data-download">IUCN</a>.</p>
 <p><br><br></p>
 <hr />
 </div>
