--- a/aulas.html
+++ b/aulas.html
@@ -338,8 +338,8 @@ funcional</p></li>
 <ul>
 <li><p>Macroecologia e conservação</p></li>
 <li><p>Seminário 4</p></li>
-<li><p>Exercícios de checagem de qualidade, padronização e roteiro
-reprodutível de aquisição e análise de dados macroecológicos</p></li>
+<li><p>Exercícios de confecção de roteiro reprodutível de aquisição e
+análise de dados macroecológicos</p></li>
 <li><p>Considerações finais da disciplina</p></li>
 </ul>
 <hr />
