--- a/atividades.html
+++ b/atividades.html
@@ -452,11 +452,11 @@ reprodutível de aquisição e análise de dados macroecológicos</em></h4>
 <img src="images/data_cycle.png" style="width:50%"/>
 </center>
 <p><br><br></p>
-<p>A <a href="atividade5.html"><strong>atividade 5</strong></a> finaliza
-o processo de ferramentas básicas de compartilhamento e
-reprodutibilidade de dados científicos. Nesta atividade, os
-participantes irão tranformar as rotinas criadas nas atividades
-anteriores em um website. <br><br></p>
+<p>A <a href="atividade5.html"><strong>atividade 5</strong></a> é um
+adicional de ferramentas básicas de compartilhamento e reprodutibilidade
+de dados científicos. Nesta atividade, os participantes irão tranformar
+as rotinas criadas nas atividades anteriores em documento reprodutível.
+<br><br></p>
 <hr />
 </div>
 </div>
