creating atividades 3 and 4

--- a/atividade_4.html
+++ b/atividade_4.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Atividades</title>
+<title>Atividade 4</title>
 
 <script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -377,87 +377,23 @@ div.tocify {
 body {
 text-align: justify}
 </style>
-<div id="atividade-1" class="section level2 unnumbered">
-<h2 class="unnumbered"><strong>Atividade 1</strong></h2>
-<div
-id="exercícios-de-cálculo-de-índices-de-diversidade-com-dados-de-bases-abertas"
+<div id="atividade-4" class="section level1 unnumbered">
+<h1 class="unnumbered">Atividade 4</h1>
+<p><br></br></p>
+<div id="primeiros-passos" class="section level2" number="0.1">
+<h2><span class="header-section-number">0.1</span> Primeiros passos</h2>
+<div id="download-e-manipulação-de-dados-geográficos"
+class="section level3" number="0.1.1">
+<h3><span class="header-section-number">0.1.1</span> Download e
+manipulação de dados geográficos</h3>
+<div id="obtendo-dados-e-criando-mapas"
 class="section level4 unnumbered">
-<h4 class="unnumbered"><em>Exercícios de cálculo de índices de
-diversidade com dados de bases abertas</em></h4>
-<center>
-<img src="atividade_1_files/figure-html/unnamed-chunk-7-1.png"
-width="550" />
-</center>
-<p>A <a href="atividade_1.html"><strong>atividade 1</strong></a>
-consiste em um exercício de mapas de distribuição a partir de bases
-abertas, neste caso, com dados do repositório da <em>International Union
-for Conservation of Nature</em> <a
-href="https://www.iucnredlist.org/resources/spatial-data-download">IUCN</a>.</p>
-<p><br><br></p>
-<hr />
+<h4 class="unnumbered">Obtendo dados e criando mapas</h4>
+<div id="instalando-pacotes" class="section level5 unnumbered">
+<h5 class="unnumbered">Instalando pacotes</h5>
 </div>
 </div>
-<div id="atividade-2" class="section level2 unnumbered">
-<h2 class="unnumbered"><strong>Atividade 2</strong></h2>
-<div
-id="exercícios-de-verificação-de-padrões-de-distribuição-de-espécies"
-class="section level4 unnumbered">
-<h4 class="unnumbered"><em>Exercícios de verificação de padrões de
-distribuição de espécies</em></h4>
-<center>
-<img src="figs/git_4.png" style="width:50%"/>
-</center>
-<p>A <a href="atividade_2.html"><strong>atividade 2</strong></a> .
-<br><br></p>
-<hr />
 </div>
-</div>
-<div id="atividade-3" class="section level2 unnumbered">
-<h2 class="unnumbered"><strong>Atividade 3</strong></h2>
-<div id="exercícios-de-redes-de-interação"
-class="section level4 unnumbered">
-<h4 class="unnumbered"><em>Exercícios de redes de interação</em></h4>
-<center>
-<img src="atividade3_files/figure-html/unnamed-chunk-13-1.png" style="width:70%"/>
-</center>
-<p><br><br></p>
-<p>A <a href="atividade_3.html"><strong>atividade 3</strong></a> .
-<br><br></p>
-<hr />
-</div>
-</div>
-<div id="atividade-4" class="section level2 unnumbered">
-<h2 class="unnumbered"><strong>Atividade 4</strong></h2>
-<div id="exercícios-de-cálculo-de-indicadores-de-diversidade-funcional"
-class="section level4 unnumbered">
-<h4 class="unnumbered"><em>Exercícios de cálculo de indicadores de
-diversidade funcional</em></h4>
-<center>
-<img src="figs/rmarkdown_icon.png" style="width:30%"/>
-</center>
-<p><br><br></p>
-<p>A <a href="atividade_4.html"><strong>atividade 4</strong></a>.
-<br><br></p>
-<hr />
-</div>
-</div>
-<div id="atividade-5" class="section level2 unnumbered">
-<h2 class="unnumbered"><strong>Atividade 5</strong></h2>
-<div
-id="exercícios-de-confecção-de-roteiro-reprodutível-de-aquisição-e-análise-de-dados-macroecológicos"
-class="section level4 unnumbered">
-<h4 class="unnumbered"><em>Exercícios de confecção de roteiro
-reprodutível de aquisição e análise de dados macroecológicos</em></h4>
-<center>
-<img src="images/data_cycle.png" style="width:50%"/>
-</center>
-<p><br><br></p>
-<p>A <a href="Atividade_5.html"><strong>atividade 5</strong></a> é um
-adicional de ferramentas básicas de compartilhamento e reprodutibilidade
-de dados científicos. Nesta atividade, os participantes irão tranformar
-as rotinas criadas nas atividades anteriores em documento reprodutível.
-<br><br></p>
-<hr />
 </div>
 </div>
 
