--- a/atividades.html
+++ b/atividades.html
@@ -346,7 +346,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/cammcordeiro/macroecologia_02-2022_UENF">
+  <a href="https://github.com/cammcordeiro/macroecologia_02-UENF_2022">
     <span class="fab fa-github"></span>
      
     GitHub Repo
@@ -428,12 +428,14 @@ class="section level4 unnumbered">
 </div>
 <div id="atividade-4" class="section level2 unnumbered">
 <h2 class="unnumbered"><strong>Atividade 4</strong></h2>
-<div id="exercícios-de-cálculo-de-indicadores-de-diversidade-funcional"
+<div
+id="exercícios-de-cálculo-de-indicadores-de-diversidade-filogenética-e-funcional"
 class="section level4 unnumbered">
 <h4 class="unnumbered"><em>Exercícios de cálculo de indicadores de
-diversidade funcional</em></h4>
+diversidade filogenética e funcional</em></h4>
 <center>
-<img src="figs/rmarkdown_icon.png" style="width:30%"/>
+<img src="atividade_4_files/figure-html/unnamed-chunk-4-1.png"
+width="600" />
 </center>
 <p><br><br></p>
 <p>A <a href="atividade_4.html"><strong>atividade 4</strong></a>.
