--- a/atividades.html
+++ b/atividades.html
@@ -405,10 +405,13 @@ class="section level4 unnumbered">
 <h4 class="unnumbered"><em>Exercícios de verificação de padrões de
 distribuição de espécies</em></h4>
 <center>
-<img src="figs/git_4.png" style="width:50%"/>
+<img src="atividade_2_files/figure-html/unnamed-chunk-5-1.png"
+width="500" />
 </center>
-<p>A <a href="atividade_2.html"><strong>atividade 2</strong></a> .
-<br><br></p>
+<p>A <a href="atividade_2.html"><strong>atividade 2</strong></a>
+utilizará o mapa gerado na atividade 1 e camadas de dados abióticos para
+investigarmos relações entre características das espécies analisadas e
+gradientes ambientais. <br><br></p>
 <hr />
 </div>
 </div>
@@ -418,11 +421,15 @@ distribuição de espécies</em></h4>
 class="section level4 unnumbered">
 <h4 class="unnumbered"><em>Exercícios de redes de interação</em></h4>
 <center>
-<img src="atividade3_files/figure-html/unnamed-chunk-13-1.png" style="width:70%"/>
+<div class="figure">
+<img src="images/rede%20de%20interacao.png" width="500" alt="" />
+<p class="caption">Foto: Reprodução | Banco de dados Web of Life</p>
+</div>
 </center>
 <p><br><br></p>
-<p>A <a href="atividade_3.html"><strong>atividade 3</strong></a> .
-<br><br></p>
+<p>Na <a href="atividade_3.html"><strong>atividade 3</strong></a> iremos
+aplicar ferramentas básicas de construção de redes de interação análise
+de grafos. <br><br></p>
 <hr />
 </div>
 </div>
@@ -438,8 +445,9 @@ diversidade filogenética e funcional</em></h4>
 width="600" />
 </center>
 <p><br><br></p>
-<p>A <a href="atividade_4.html"><strong>atividade 4</strong></a>.
-<br><br></p>
+<p>A <a href="atividade_4.html"><strong>atividade 4</strong></a> inclui
+uma análise das relações filogenéticas dos peixes-borboleta e um cálculo
+básico de descritores funcionais. <br><br></p>
 <hr />
 </div>
 </div>
