--- a/index.html
+++ b/index.html
@@ -289,22 +289,10 @@ $(document).ready(function () {
 body {
 text-align: justify}
 </style>
-<table>
-<colgroup>
-<col width="34%" />
-<col width="28%" />
-<col width="36%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left"><a href="https://uenf.br/"><img
-src="images/logo_uenf.jpeg" width="300" /></a></td>
-<td align="right"><a href="https://uenf.br/cbb/lca/"><img
-src="images/logo_lca.png" width="227" /></a></td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<p><a
+href="https://uenf.br/posgraduacao/ecologia-recursosnaturais/"><img
+src="images/cabecalho.png" /></a></p>
+<p><br></br></p>
 <div id="macroecologia-marinha" class="section level2">
 <h2>Macroecologia Marinha</h2>
 <blockquote>
