remove code folding

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@ src="images/cabecalho.png" /></a></p>
 <h2>Macroecologia Marinha</h2>
 <blockquote>
 <p>UENF - CBB - Laboratório de Ciências Ambientais (LCA)</p>
-<p>Professores: Cesar A. M. M. Cordeiro, Thiago C. Mendes (UFF) e Juan
-P. Quimbayo (CEBIMar/USP)</p>
+<p>Professores: Cesar A. M. M. Cordeiro (LCA/UENF), Thiago C. Mendes
+(UFF e UFRJ) e Juan P. Quimbayo (CEBIMar/USP)</p>
 </blockquote>
 <hr />
 <div id="sobre-o-curso" class="section level3">
