--- a/info.html
+++ b/info.html
@@ -33,7 +33,6 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -213,9 +212,6 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
-<style type="text/css">
-.code-folding-btn { margin-bottom: 4px; }
-</style>
 
 
 
@@ -359,14 +355,6 @@ div.tocify {
 
 <div id="header">
 
-<div class="btn-group pull-right float-right">
-<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
-<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
-<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
-<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
-</ul>
-</div>
-
 
 
 
@@ -394,13 +382,13 @@ aulas práticas terão momentos de interação com os professores e de
 trabalho autônomo dos participantes.</p>
 <ul>
 <li>Duração: 08:30-12:30 / 14:00 - 18:00</li>
-<li>Dias 07, 08, 09, 28, 29 e 30 de novembro <br><br></li>
+<li>Dias: 07, 08, 09, 28, 29 e 30 de novembro <br><br></li>
 </ul>
 <p><strong>Avaliações</strong></p>
 <ul>
 <li>Atividades síncronas</li>
 <li>Atividades assíncronas</li>
-<li>Debates</li>
+<li>Debates (seminários)</li>
 <li>Avaliação final (trabalho autoral)</li>
 </ul>
 <p><br><br></p>
@@ -529,11 +517,6 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
-<script>
-$(document).ready(function () {
-  window.initializeCodeFolding("show" === "show");
-});
-</script>
 
 <script>
 $(document).ready(function ()  {
