--- a/aulas.html
+++ b/aulas.html
@@ -322,24 +322,25 @@ espécies</p></li>
 <p><strong>Aula 4 - Segunda-feira (28/11 =&gt; 8:30 – 12:30 / 14:00 -
 18:00)</strong></p>
 <ul>
-<li><p>Barreiras biogeográficas</p></li>
-<li><p>Centros de diversidade e endemismo</p></li>
+<li><strong>CANCELADA</strong></li>
 </ul>
 <p><strong>Aula 5 - Terça-feira (29/11 =&gt; 8:30 – 12:30 / 14:00 -
 18:00)</strong></p>
 <ul>
+<li><p>Barreiras biogeográficas</p></li>
+<li><p>Centros de diversidade e endemismo</p></li>
 <li><p>Diversidade filogenética e funcional</p></li>
-<li><p>Exercícios de cálculo de indicadores de diversidade
-funcional</p></li>
 <li><p>Seminário 3</p></li>
 </ul>
 <p><strong>Aula 6 - Quarta-feira (30/11 =&gt; 8:30 – 12:30 / 14:00 -
 18:00)</strong></p>
 <ul>
 <li><p>Macroecologia e conservação</p></li>
-<li><p>Seminário 4</p></li>
+<li><p>Exercícios de cálculo de indicadores de diversidade
+funcional</p></li>
 <li><p>Exercícios de checagem de qualidade, padronização e roteiro
 reprodutível de aquisição e análise de dados macroecológicos</p></li>
+<li><p>Seminário 4</p></li>
 <li><p>Considerações finais da disciplina</p></li>
 </ul>
 <hr />
